--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <!-- code added for bootstrap-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Configure SystemJS -->
     <script src="systemjs.config.js"></script>
@@ -23,8 +26,10 @@
 </head>
 
 <body>
+    <div class="jumbotron text-center"  >
+    <h1>Employee Project Allocation System</h1>
+</div>  
     <pm-app></pm-app>
-    Starter files
 </body>
 
 </html>
