--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head lang="en">
-    <title>Acme Product Management</title>
+    <base href="/">
+    <title>Employee Project Allocation System</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -28,7 +29,7 @@
 <body>
     <div class="jumbotron text-center"  >
     <h1>Employee Project Allocation System</h1>
-</div>  
+    </div>  
     <pm-app></pm-app>
 </body>
 
